--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -85,7 +85,8 @@ body.dark-theme{
 }
 
 
-.certificate_rounder {
+.certificate_rounder,
+.project_rounder {
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -195,6 +196,7 @@ body.scale-cv{
 .scale-cv .education__container,
 .scale-cv .experience__container,
 .scale-cv .certificate__container,
+.scale-cv .project__container,
 .scale-cv .publications__container{
   gap: 1rem;
 }
@@ -542,7 +544,8 @@ img{
 }
 
 /*========== CERTIFICATES ==========*/
-.certificate__title{
+.certificate__title,
+.project__title{
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
 }
